Optimize FolderComparator